# file-downloader

./: .gitignore  README.md  config.example.toml  docker-bake.hcl  pyproject.toml
.github/workflows/: docker-dev.yml  docker-release.yml  release.yml
docker/: .env  Dockerfile  README.md  compose.yml
src/: aria2s.py  config.py  fetcher.py  logger.py  puller.py  utils.py
